# Flugbahnberechnung

./: .buildconfig  .editorconfig  .gitignore  Flugbahnberechnung.sln  README.md
Debug/: Flugbahnberechnung.exe.metagen
Flugbahnberechnung/: App_Main.cpp  CSV_Datei.cpp  CSV_Datei.h  Camera_managed.cpp  Camera_managed.h  Camera_unmanaged.cpp  Camera_unmanaged.h  CudaKernels.cu  CudaKernels.cuh  Flugbahnberechnung.vcxproj  Flugbahnberechnung.vcxproj.filters  GlobalObjects.cpp  GlobalObjects.h  Kalmanfilter.cpp  Kalmanfilter.h  Main.cpp  Main.h  OpenCV_managed.cpp  OpenCV_managed.h  OpenCV_unmanaged.cpp  OpenCV_unmanaged.h  frm_CameraCalibration.cpp  frm_CameraCalibration.h  frm_CameraCalibration_Menu.cpp  frm_CameraCalibration_Menu.h  frm_CameraCalibration_Single.cpp  frm_CameraCalibration_Single.h  frm_CameraCalibration_Stereo.cpp  frm_CameraCalibration_Stereo.h  frm_Camera_Calibration.cpp  frm_Camera_Calibration.h  frm_Camera_Calibration_crop.cpp  frm_Camera_Calibration_crop.h  frm_Camera_Positioning.cpp  frm_Camera_Positioning.h  frm_Camera_Positioning.resx  frm_Camera_Positioning_Pose.cpp  frm_Camera_Positioning_Pose.h  frm_Main.cpp  frm_Main.h  (+19 more)
Parameter/: Camera_Calibration_Parameter_CameraID_0.csv  Camera_Calibration_Parameter_CameraID_1.csv  Camera_Positioning.csv  Camera_setting0.csv  Camera_setting1.csv  Pose_world_to_camera0.csv  Pose_world_to_camera1.csv
Unterlagen/CUDAkalmanFilter-master/: invert.cpp  kalman.cu  matrix.cu  matrix_kernel.cu
mechanics/: Kamerahalterung_Winkel_45.ipt  Kamerahalterung_Winkel_45.stl  Kamerahalterung_Winkel_45.stp  Kamerahalterung_Winkel_5.ipt  Kamerahalterung_Winkel_5.stl  Kamerahalterung_Winkel_5.stp  Kamerahalterung_Winkel_variabel.ipt
software/: Flugbahnberechnung.sln
software/Flugbahnberechnung/: Camera_managed.cpp  Camera_managed.h  Camera_unmanaged.cpp  Camera_unmanaged.h  Flugbahnberechnung.vcxproj  Flugbahnberechnung.vcxproj.filters  OpenCV_unmanaged.cpp  frm_Camera_Calibration.cpp  frm_Main.cpp  object.h  (+9 more)
software/Linux/Flugbahnberechnung/: App_main.cpp  CMakeLists.txt  C_mathhelper.cpp  C_mathhelper.h  Camera_unmanaged.h  Flugbahnberechnung.pro  Flugbahnberechnung.vcxproj  Main.cpp  Main.h  camera2.cpp  camera2.h  frm_Object_Calibration.h  frm_Object_Tracking.cpp  frm_Object_Tracking.h  frm_camera_calibration.cpp  frm_camera_calibration.h  frm_camera_calibration.ui  frm_camera_calibration_crop.cpp  frm_camera_calibration_crop.h  frm_camera_calibration_crop.ui  frm_camera_positioning.cpp  frm_camera_positioning.h  frm_camera_positioning.ui  frm_camera_positioning_pose.cpp  frm_camera_positioning_pose.h  frm_camera_positioning_pose.ui  frm_main.cpp  frm_main.h  frm_main.ui  frm_object_calibration.cpp  frm_object_calibration.h  frm_object_calibration.ui  frm_object_tracking.cpp  frm_object_tracking.h  frm_object_tracking.ui  imagefilter.cpp  imagefilter.h  loadmanager.cpp  loadmanager.h  main.cpp  (+13 more)
software/Linux/Flugbahnberechnung/Code/: Camera_unmanaged.cpp  Camera_unmanaged.h  CudaKernels.cu  CudaKernels.cuh  GlobalObjects.cpp  Main.h  OpenCV_unmanaged.cpp  camera.h  frm_Camera_Calibration.h  frm_Camera_Calibration_crop.h  frm_Main.h  kalman_cuda.cuh  object.h  opencv_unmanaged.h  posen.cpp
software/Linux/Flugbahnberechnung/cuda/: cudaKalman.cu  cudaKalman.cuh  kalman_cuda.cuh
software/Linux/Flugbahnberechnung/forms/: frm_camera_calibration.ui  frm_camera_positioning.ui  frm_camera_positioning_pose.ui  frm_main.ui  frm_object_calibration.ui  frm_object_tracking.ui  frm_robot_calibration.ui
software/Linux/Flugbahnberechnung/headers/: CSV_Datei.h  GlobalObjects.h  Kalmanfilter.h  Main.h  camera.h  camera2.h  camera_manager.h  frm_camera_calibration.h  frm_camera_calibration_crop.h  frm_camera_positioning.h  frm_main.h  frm_object_calibration.h  frm_object_tracking.h  imagefilter.h  loadmanager.h  object.h  point.h  posen.h  savemanager.h  tracking.h  trackingManager.h
software/Linux/Flugbahnberechnung/headers/Bildverarbeitung/: camera2.h  camera_manager.h  imagefilter.h
software/Linux/Flugbahnberechnung/headers/CSV_Manager/: CSV_Datei.h  loadmanager.h  savemanager.h
software/Linux/Flugbahnberechnung/headers/Etc/: GlobalObjects.h  Main.h  mathhelper.h  object.h  point.h  watchdog.h
software/Linux/Flugbahnberechnung/headers/Forms/: frm_camera_calibration.h  frm_camera_positioning.h  frm_camera_positioning_pose.h  frm_main.h  frm_object_calibration.h  frm_object_tracking.h  frm_robot_calibration.h
software/Linux/Flugbahnberechnung/headers/Positionsbestimmung/: Kalmanfilter.h  kalmanoncuda.h  trackingManager.h
software/Linux/Flugbahnberechnung/headers/Roboter/: pidregler.h  posen.h  robot.h  robotmanager.h
software/Linux/Flugbahnberechnung/sources/: App_main.cpp  CSV_Datei.cpp  GlobalObjects.cpp  Kalmanfilter.cpp  Main.cpp  camera.cpp  camera2.cpp  camera_manager.cpp  frm_camera_calibration.cpp  frm_camera_calibration_crop.cpp  frm_camera_positioning.cpp  frm_camera_positioning_pose.cpp  frm_main.cpp  frm_object_calibration.cpp  frm_object_tracking.cpp  imagefilter.cpp  loadmanager.cpp  object.cpp  posen.cpp  savemanager.cpp  tracking.cpp  trackingManager.cpp
software/Linux/Flugbahnberechnung/sources/Bildverarbeitung/: camera2.cpp  camera_manager.cpp  imagefilter.cpp
software/Linux/Flugbahnberechnung/sources/CSV_Manager/: CSV_Datei.cpp  loadmanager.cpp  savemanager.cpp
software/Linux/Flugbahnberechnung/sources/Etc/: App_main.cpp  GlobalObjects.cpp  Main.cpp  mathhelper.cpp  object.cpp  plotter.cpp  watchdog.cpp
software/Linux/Flugbahnberechnung/sources/Forms/: frm_camera_calibration.cpp  frm_camera_positioning.cpp  frm_camera_positioning_pose.cpp  frm_main.cpp  frm_object_calibration.cpp  frm_object_tracking.cpp  frm_robot_calibration.cpp
software/Linux/Flugbahnberechnung/sources/Positionsbestimmung/: Kalmanfilter.cpp  kalmanoncuda.cpp  trackingManager.cpp
software/Linux/Flugbahnberechnung/sources/Roboter/: pidregler.cpp  posen.cpp  robot.cpp  robotmanager.cpp  sollwegvorgabe.cpp
software/Linux/libCuda_v2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cudaKalman.cuh  output.txt
(+168 files in other folders)
